deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-rest-api-service
spec:
  type: NodePort
  selector:
    app: go-rest-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
